--- a/style.css
+++ b/style.css
@@ -458,6 +458,13 @@ th {
 .site-inner {
 	clear: both;
 	padding-top: 40px;
+	padding-left: 2%;
+	padding-right: 2%;
+}
+
+.home .site-inner {
+	padding-left: 0;
+	padding-right: 0;
 }
 
 /* ## Column Widths and Positions
@@ -1199,7 +1206,6 @@ li.comment {
 .sidebar .widget {
 	background-color: #fff;
 	margin-bottom: 40px;
-	padding: 40px;
 }
 
 
@@ -1391,8 +1397,10 @@ a.more-link:hover {
 
 /* # Media Queries
 ---------------------------------------------------------------------------------------------------- */
-@media only screen and (min-width: 800px) {
-		
+
+@media only screen and (min-width: 768px) {
+
+
 	body {
 		background-color: #f5f5f5;
 		font-size: 18px;
@@ -1401,11 +1409,7 @@ a.more-link:hover {
 	.entry {
 		padding: 50px 60px;
 	}
-	
 
-}
-
-@media only screen and (min-width: 960px) {
 
 	/* Columns
 	---------------------------------------------------------------------------------------------------- */
@@ -1497,7 +1501,7 @@ a.more-link:hover {
 	}
 
 	.site-header .wrap {
-		padding: 20px 0;
+		padding: 20px 1%;
 	}
 
 	.site-header  .genesis-nav-menu {
@@ -1518,14 +1522,14 @@ a.more-link:hover {
 
 	.title-area {
 		float: left;
-		width: 33.33%; /*400px*/
+		width: 30%; /*400px*/
 	}
 
 	/* ## Header Widget Area
 	--------------------------------------------- */
 
 	.site-header .widget-area {
-		width: 66.66%; /*800px*/
+		width: 70%; /*800px*/
 		float: right;
 		text-align: right;
 	}
@@ -1535,12 +1539,19 @@ a.more-link:hover {
 	/* Layout
 	---------------------------------------------------------------------------------------------------- */
 
-	.site-inner,
+	.home .site-inner,
 	.wrap {
 		max-width: 960px;
 		margin: 0 auto;
 		padding-left: 0; 
   		padding-right:0; 
+	}
+	.site-inner,
+	.home .wrap {
+		max-width: 960px;
+		margin: 0 auto;
+		padding-left: 1%; 
+  		padding-right:1%; 
 	}
 
 	.content-sidebar-sidebar .content-sidebar-wrap {
@@ -1602,6 +1613,10 @@ a.more-link:hover {
 		width: 15%; /*180px*/
 		float: left;	
 	}
+
+	.sidebar .widget {
+		padding: 40px;
+	}		
 	
 	/* Menus
 	---------------------------------------------------------------------------------------------------- */
@@ -1673,7 +1688,7 @@ a.more-link:hover {
 @media only screen and (min-width: 1200px) {
 	
 	.site-header .wrap {
-		padding: 40px 0;
+		padding: 20px 0;
 	}
 
 	.site-inner,
@@ -1681,8 +1696,30 @@ a.more-link:hover {
 		max-width: 1200px;
 	}
 
+	.home .site-inner {
+		max-width: none;
+	}
+
+	.home .wrap {
+		max-width: 1200px;
+	}
+
 	.site-inner {
 		padding-top: 40px;
+	}
+
+	/* ## Title Area
+	--------------------------------------------- */
+
+	.title-area {
+		width: 27%; /*400px*/
+	}
+
+	/* ## Header Widget Area
+	--------------------------------------------- */
+
+	.site-header .widget-area {
+		width: 73%; /*800px*/
 	}
 
 
