using filter to change styles

--- a/style.css
+++ b/style.css
@@ -824,6 +824,12 @@ img.alignright,
 	padding: 20px 5%;
 }
 
+.header-image .site-title > a {
+ float: left;
+ min-height: 150px;
+ width: 100%;
+}
+
 
 /* ## Title Area
 --------------------------------------------- */
@@ -861,8 +867,8 @@ img.alignright,
 	margin-bottom: 0;
 }
 
-.header-image .site-description,
-.header-image .site-title {
+.header-image .site-description/*,
+.header-image .site-title*/ {
 	display: block;
 	text-indent: -9999px;
 }
