visual guide update

--- a/style.css
+++ b/style.css
@@ -1799,9 +1799,9 @@ Beaver Builder Full Width
 .beforecontent {background-color:coral;}
 .aftercontent {background-color:coral;}
 
-.homeleft {background-color: aquamarine;}
+.hometop{background-color: aquamarine;}
 .homemiddle{background-color: cadetblue; }
-.homeright {background-color: indianred; }*/
+.homebottom {background-color: indianred; }*/
 
 .site-inner {padding-top:10px;}
 
