--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
 Theme Name: genesischild-mobile-first
 Description: GenesisChild Mobile First is a vanilla base starter theme created for Genesis Framework
-Author: Neil Gee
+Author: Neil Gee/WP Beaches
 Author URI: http://www.wpbeaches.com/
 Version: 2.1.2
-Tags: Contains regular Widget areas as well as preheaderwrap, home page Hero area, optin wrap and pre-footer widget content wrap
+Tags: Contains regular Widget areas as well as preheader, home page Hero area, optin wrap and post footer widget areas
 Template: genesis
 */
 
