--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@ Theme Name: genesischild-mobile-first
 Description: GenesisChild Mobile First is a vanilla base starter theme created for Genesis Framework
 Author: Neil Gee/WP Beaches
 Author URI: http://www.wpbeaches.com/
-Version: 2.1.2
-Tags: Contains regular Widget areas as well as preheader, home page Hero area, optin wrap and post footer widget areas
+Version: 3
+Tags: Contains regular Widget areas as well as preheader, home page Hero area, optin, home page top, middle and botton and post footer widget areas
 Template: genesis
 */
 
