--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme Name: genesischild-mobile-first
 Description: GenesisChild Mobile First is a vanilla base starter theme created for Genesis Framework
 Author: Neil Gee/WP Beaches
 Author URI: http://www.wpbeaches.com/
-Version: 2.1.2
+Version: 2.2.2
 Tags: Contains regular Widget areas as well as preheader, home page Hero area, optin wrap and post footer widget areas
 Template: genesis
 */
@@ -21,6 +21,7 @@ Template: genesis
 	- Gallery
 	- Forms
 	- Tables
+	- Screen Reader Text
 - Structure and Layout
 	- Site Containers
 	- Column Widths and Positions
@@ -40,9 +41,11 @@ Template: genesis
 	- Title Area
 	- Widget Area
 - Site Navigation
-	- Header Navigation
+	- Accessible Menu			
+	- Site Header Navigation
 	- Primary Navigation
 	- Secondary Navigation
+	- Skip Links
 - Content Area
 	- Entries
 	- Entry Meta
@@ -56,6 +59,7 @@ Template: genesis
 	- Max-width: 1200px
 	- Max-width: 960px
 	- Max-width: 800px
+- Print Styles
 */
 
 
@@ -70,12 +74,19 @@ html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:1
 /* ## Box Sizing
 --------------------------------------------- */
 
-*,
-input[type="search"] {
+html,
+input[type="search"]{
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing:    border-box;
 	box-sizing:         border-box;
 }
+
+*,
+*:before,
+*:after {
+	box-sizing: inherit;
+}
+
 
 /* ## Float Clearing
 --------------------------------------------- */
@@ -122,11 +133,21 @@ input[type="search"] {
 /* ## Typographical Elements
 --------------------------------------------- */
 
+html {
+    font-size: 62.5%; /* 10px browser default */
+}
+
+/* Chrome fix */
+body > div {
+    font-size: 1.8rem;
+}
+
 body {
 	background-color: #fff;
 	color: #333;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 16px;
+	font-size: 1.6rem;
 	font-weight: 300;
 	line-height: 1.625;
 	margin: 0;
@@ -148,23 +169,15 @@ textarea:focus,
 	transition:         all 0.1s ease-in-out;
 }
 
-::-moz-selection {
-	background-color: #333;
-	color: #fff;
-}
-
-::selection {
-	background-color: #333;
-	color: #fff;
-}
-
 a {
 	color: #e5554e;
 	text-decoration: none;
 }
 
-a:hover {
+a:hover,
+a:focus {
 	color: #333;
+	text-decoration: underline;
 }
 
 p {
@@ -180,6 +193,14 @@ ul {
 
 li {
 	list-style-type: none;
+}
+
+hr {		
+	border: 0;		
+	border-collapse: collapse;		
+	border-top: 1px solid #ddd;		
+	clear: both;		
+	margin: 1em 0;		
 }
 
 b,
@@ -202,6 +223,7 @@ blockquote::before {
 	content: "\201C";
 	display: block;
 	font-size: 30px;
+	font-size: 3rem;
 	height: 0;
 	left: -20px;
 	position: relative;
@@ -227,26 +249,32 @@ h6 {
 
 h1 {
 	font-size: 36px;
+	font-size: 3.6rem;
 }
 
 h2 {
 	font-size: 30px;
+	font-size: 3rem;
 }
 
 h3 {
 	font-size: 24px;
+	font-size: 2.4rem;
 }
 
 h4 {
 	font-size: 20px;
+	font-size: 2rem;
 }
 
 h5 {
 	font-size: 18px;
+	font-size: 1.8rem;
 }
 
 h6 {
 	font-size: 16px;
+	font-size: 1.6rem;
 }
 
 /* ## Objects
@@ -321,7 +349,8 @@ img {
 	padding: 4px;
 }
 
-.gallery img:hover {
+.gallery img:hover,
+.gallery img:focus {
 	border: 1px solid #999;
 }
 
@@ -335,6 +364,7 @@ textarea {
 	border: 1px solid #ddd;
 	color: #333;
 	font-size: 18px;
+	font-size: 1.8rem;
 	font-weight: 300;
 	padding: 16px;
 	width: 100%;
@@ -344,9 +374,6 @@ input:focus,
 textarea:focus {
 	border: 1px solid #999;
 	outline: none;
-	outline-color: #5B9DD9;
-    outline-style: auto;
-    outline-width: 5px;
 }
 
 
@@ -373,14 +400,34 @@ input[type="reset"],
 input[type="submit"],
 .button {
 	background-color: #333;
-	border: none;
+	border: 0;
 	color: #fff;
 	cursor: pointer;
 	font-size: 16px;
+	font-size: 1.6rem;
 	font-weight: 300;
 	padding: 10px 15px;
 	text-transform: uppercase;
 	width: auto;
+}
+
+button:hover,
+input:hover[type="button"],
+input:hover[type="reset"],
+input:hover[type="submit"],
+.button:hover,
+button:focus,
+input:focus[type="button"],
+input:focus[type="reset"],
+input:focus[type="submit"],
+.button:focus  {
+	background-color: #c3251d;
+	color: #fff;
+}
+
+.entry-content .button:hover,
+.entry-content .button:focus {
+	color: #fff;
 }
 
 .footer-widgets button,
@@ -388,20 +435,7 @@ input[type="submit"],
 .footer-widgets input[type="reset"],
 .footer-widgets input[type="submit"],
 .footer-widgets .button {
-	background-color: #e5554e;
-	color: #fff;
-}
-
-button:hover,
-input:hover[type="button"],
-input:hover[type="reset"],
-input:hover[type="submit"],
-.button:hover {
-	background-color: #e5554e;
-	color: #fff;
-}
-
-.entry-content .button:hover {
+	background-color: #c3251d;
 	color: #fff;
 }
 
@@ -409,7 +443,12 @@ input:hover[type="submit"],
 .footer-widgets input:hover[type="button"],
 .footer-widgets input:hover[type="reset"],
 .footer-widgets input:hover[type="submit"],
-.footer-widgets .button:hover {
+.footer-widgets .button:hover,
+.footer-widgets button:focus,
+.footer-widgets input:focus[type="button"],
+.footer-widgets input:focus[type="reset"],
+.footer-widgets input:focus[type="submit"],
+.footer-widgets .button:focus {
 	background-color: #fff;
 	color: #333;
 }
@@ -450,6 +489,42 @@ td {
 
 th {
 	font-weight: 400;
+}
+
+/* ## Screen Reader Text
+--------------------------------------------- */
+
+.screen-reader-text,
+.screen-reader-text span,
+.screen-reader-shortcut {
+	position: absolute !important;
+	clip: rect(0, 0, 0, 0);
+	height: 1px;
+	width: 1px;
+	border: 0;
+	overflow: hidden;
+}
+
+.screen-reader-text:focus,
+.screen-reader-shortcut:focus,
+.genesis-nav-menu .search input[type="submit"]:focus,
+.widget_search input[type="submit"]:focus  {
+	clip: auto !important;
+	height: auto;
+	width: auto;
+	display: block;
+	font-size: 1em;
+	font-weight: bold;
+	padding: 15px 23px 14px;
+	color: #333;
+	background: #fff;
+	z-index: 100000; /* Above WP toolbar. */
+	text-decoration: none;
+	box-shadow: 0 0 2px 2px rgba(0,0,0,.6);
+}
+
+.more-link {
+    position: relative;
 }
 
 
@@ -570,12 +645,14 @@ th {
 .author-box {
 	background-color: #fff;
 	font-size: 16px;
+	font-size: 1.6rem;
 	margin-bottom: 40px;
 	padding: 40px;
 }
 
 .author-box-title {
 	font-size: 16px;
+	font-size: 1.6rem;
 	margin-bottom: 4px;
 }
 
@@ -617,10 +694,12 @@ th {
 
 .archive-title {
 	font-size: 20px;
+	font-size: 2rem;
 }
 
 .entry-title {
 	font-size: 36px;
+	font-size: 3.6rem;
 }
 
 .entry-title a,
@@ -628,12 +707,14 @@ th {
 	color: #333;
 }
 
-.entry-title a:hover {
+.entry-title a:hover,
+.entry-title a:focus  {
 	color: #e5554e;
 }
 
 .widget-title {
 	font-size: 18px;
+	font-size: 1.8rem;
 	margin-bottom: 20px;
 }
 
@@ -692,12 +773,20 @@ img.alignright,
 
 .wp-caption-text {
 	font-size: 14px;
+	font-size: 1.4rem;
 	font-weight: 700;
 	text-align: center;
 }
 
 .entry-content p.wp-caption-text {
 	margin-bottom: 0;
+}
+
+		
+.entry-content .wp-audio-shortcode,		
+.entry-content .wp-playlist,		
+.entry-content .wp-video {		
+	margin: 0 0 28px;		
 }
 
 
@@ -716,7 +805,7 @@ img.alignright,
 }
 
 .widget li li {
-	border: none;
+	border: 0;
 	margin: 0 0 0 30px;
 	padding: 0;
 }
@@ -745,6 +834,7 @@ img.alignright,
 
 .featured-content .entry-title {
 	font-size: 20px;
+	font-size: 2rem;
 }
 
 
@@ -770,6 +860,7 @@ img.alignright,
 
 .enews-widget input {
 	font-size: 16px;
+	font-size: 1.6rem;
 	margin-bottom: 16px;
 }
 
@@ -780,7 +871,8 @@ img.alignright,
 	width: 100%;
 }
 
-.enews-widget input:hover[type="submit"] {
+.enews-widget input:hover[type="submit"],
+.enews-widget input:focus[type="submit"] {
 	background-color: #fff;
 	color: #333;
 }
@@ -796,6 +888,23 @@ img.alignright,
 	display: none;
 }
 
+/* # Skip Links
+---------------------------------------------------------------------------------------------------- */
+.genesis-skip-link {
+	margin: 0;
+}
+
+.genesis-skip-link li {
+	height: 0;
+	width: 0;
+	list-style: none;
+}
+
+/* Display outline on focus */
+:focus {
+	color: #333;
+	outline: #ccc solid 1px;
+}
 
 /* # Site Header
 ---------------------------------------------------------------------------------------------------- */
@@ -843,18 +952,21 @@ img.alignright,
 
 .site-title {
 	font-size: 32px;
+	font-size: 3.2rem;
 	font-weight: 400;
 	line-height: 1.2;
 }
 
 .site-title a,
-.site-title a:hover {
+.site-title a:hover,
+.site-title a:focus {
 	color: #333;
 }
 
 
 .site-description {
 	font-size: 16px;
+	font-size: 1.6rem;
 	font-weight: 300;
 	line-height: 1.5;
 }
@@ -886,8 +998,14 @@ img.alignright,
 .genesis-nav-menu {
 	clear: both;
 	font-size: 16px;
+	font-size: 1.6rem;
 	line-height: 1;
 	width: 100%;
+}
+
+.genesis-nav-menu a {			
+	text-decoration: none;		
+	display: block;			
 }
 
 .genesis-nav-menu .menu-item {
@@ -895,11 +1013,11 @@ img.alignright,
 	text-align: left;
 }
 
-
-
 .genesis-nav-menu a:hover,
+.genesis-nav-menu a:focus,
 .genesis-nav-menu .current-menu-item > a,
-.genesis-nav-menu .sub-menu .current-menu-item > a:hover {
+.genesis-nav-menu .sub-menu .current-menu-item > a:hover,
+.genesis-nav-menu .sub-menu .current-menu-item > a:focus {
 	color: #e5554e;
 }
 
@@ -919,11 +1037,13 @@ img.alignright,
 .genesis-nav-menu .sub-menu a {
 	background-color: #fff;
 	border: 1px solid #eee;
-	border-top: none;
+	border-top: 0;
 	font-size: 14px;
+	font-size: 1.4rem;
 	padding: 20px;
 	position: relative;
 	width: 200px;
+	word-wrap: break-word;
 }
 
 .genesis-nav-menu .sub-menu .sub-menu {
@@ -963,6 +1083,19 @@ img.alignright,
 	display: none;
 }
 
+/* ## Accessible Menu
+--------------------------------------------- */
+
+.menu .menu-item:focus {
+	position: static;
+}
+
+.menu .menu-item > a:focus + ul.sub-menu,
+.menu .menu-item.sfHover > ul.sub-menu {
+	left: auto;
+	opacity: 1;
+}
+
 /* ## Site Header Navigation
 --------------------------------------------- */
 
@@ -992,14 +1125,21 @@ img.alignright,
 	color: #333;
 }
 
-.nav-primary .genesis-nav-menu a:hover, 
-.nav-primary .genesis-nav-menu .current-menu-item > a, 
-.nav-primary .genesis-nav-menu .sub-menu .current-menu-item > a:hover {
+.nav-primary .genesis-nav-menu a:hover,
+.nav-primary .genesis-nav-menu a:focus,
+.nav-primary .genesis-nav-menu .current-menu-item > a {
 	color: #666;
 }
 .nav-primary .genesis-nav-menu li:last-child > a {
 	padding-right: 0;
 }
+
+.nav-primary .genesis-nav-menu .sub-menu a:hover,
+.nav-primary .genesis-nav-menu .sub-menu a:focus,
+.nav-primary .genesis-nav-menu .sub-menu .current-menu-item > a {
+	color: #999;
+}
+
 
 /* ## Secondary Navigation
 --------------------------------------------- */
@@ -1008,17 +1148,7 @@ img.alignright,
 	background-color: #333;
 	color: #fff;
 }
-#menu-secondary-navigation a {
-	color: #fff;
-}
-#menu-secondary-navigation a:hover, 
-#menu-secondary-navigation .sub-menu a:hover{
-	 color: #e5554e;
-}
 
-#menu-secondary-navigation .sub-menu a {
-	color: #000;
-}
 
 
 /* FrontPage Widgets
@@ -1079,6 +1209,7 @@ img.alignright,
 
 p.entry-meta {
 	font-size: 16px;
+	font-size: 1.6rem;
 	margin-bottom: 0;
 }
 
@@ -1123,10 +1254,12 @@ p.entry-meta {
 	cursor: pointer;
 	display: inline-block;
 	font-size: 16px;
+	font-size: 1.6rem;
 	padding: 8px 12px;
 }
 
 .archive-pagination li a:hover,
+.archive-pagination li a:focus,
 .archive-pagination .active a {
 	background-color: #e5554e;
 }
@@ -1152,16 +1285,18 @@ p.entry-meta {
 
 .comment-header {
 	font-size: 16px;
+	font-size: 1.6rem;
 }
 
 li.comment {
 	background-color: #f5f5f5;
 	border: 2px solid #fff;
-	border-right: none;
+	border-right: 0;
 }
 
 .comment-content {
 	clear: both;
+	word-wrap: break-word;
 }
 
 .comment-list li {
@@ -1198,6 +1333,7 @@ li.comment {
 .form-allowed-tags {
 	background-color: #f5f5f5;
 	font-size: 16px;
+	font-size: 1.6rem;
 	padding: 24px;
 }
 
@@ -1207,6 +1343,7 @@ li.comment {
 
 .sidebar {
 	font-size: 16px;
+	font-size: 1.6rem;
 }
 
 .sidebar li {
@@ -1233,6 +1370,7 @@ li.comment {
 .footerwidgetheader .widget-title {
 	text-align: center;
 	font-size: 30px;
+	font-size: 3rem;
 	margin: 20px auto;
 }
 
@@ -1253,7 +1391,8 @@ li.comment {
 }
 
 .footer-widgets a.button,
-.footer-widgets a:hover {
+.footer-widgets a:hover,
+.footer-widgets a:focus {
 	color: #fff;
 }
 
@@ -1280,6 +1419,7 @@ li.comment {
 .site-footer {
 	background-color: #fff;
 	font-size: 16px;
+	font-size: 1.6rem;
 	line-height: 1;
 	padding: 40px 0;
 	text-align: center;
@@ -1309,6 +1449,7 @@ li.comment {
 .woocommerce-page #respond input#submit, 
 .woocommerce-page #content input.button {
 	font-size: 12px;
+	font-size: 1.2rem;
 }
 
 .woocommerce ul.products li.product, 
@@ -1372,12 +1513,14 @@ li.comment {
 .woocommerce .quantity .qty {
 	padding: 8px;
 	font-size: 16px;
+	font-size: 1.6rem;
 }
 
 .woocommerce form .form-row input.input-text, 
 .woocommerce form .form-row textarea {
 	padding: 10px;
 	font-size: 16px;
+	font-size: 1.6rem;
 }
 
 
@@ -1387,6 +1530,7 @@ li.comment {
 a.more-link {
 	display:inline-block;
 	font-size:14px;
+	font-size: 1.4rem;
 	margin-top:10px;
 	padding:5px 20px;
 	border-radius:4px;
@@ -1448,6 +1592,7 @@ Beaver Builder Full Width
 	body {
 		background-color: #f5f5f5;
 		font-size: 18px;
+		font-size: 1.8rem;
 	}
 
 	.entry {
@@ -1981,3 +2126,146 @@ Beaver Builder Full Width
 
 
 
+/* # Print Styles
+---------------------------------------------------------------------------------------------------- */
+
+@media print {
+
+	*,
+	*:before,
+	*:after {
+		background: transparent !important;
+		box-shadow: none !important;
+		color: #000 !important;
+		text-shadow: none !important;
+	}
+
+	a,
+	a:visited {
+		text-decoration: underline;
+	}
+
+	a[href]:after {
+		content: " (" attr(href) ")";
+	}
+
+	abbr[title]:after {
+		content: " (" attr(title) ")";
+	}
+
+	a[href^="javascript:"]:after,
+	a[href^="#"]:after,
+	.site-title > a:after {
+		content: "";
+	}
+
+	thead {
+		display: table-header-group;
+	}
+
+	img,
+	tr {
+		page-break-inside: avoid;
+	}
+
+	img {
+		max-width: 100% !important;
+	}
+
+	@page {
+		margin: 2cm 0.5cm;
+	}
+
+	p,
+	h2,
+	h3 {
+		orphans: 3;
+		widows: 3;
+	}
+
+	blockquote,
+	pre {
+		border: 1px solid #999;
+		page-break-inside: avoid;
+	}
+
+	.content,
+	.content-sidebar {
+		width: 100%;
+	}
+
+	button,
+	input,
+	select,
+	textarea,
+	.breadcrumb,
+	.comment-edit-link,
+	.comment-form,
+	.comment-list .reply a,
+	.comment-reply-title,
+	.edit-link,
+	.entry-comments-link,
+	.entry-footer,
+	.genesis-box,
+	.header-widget-area,
+	.hidden-print,
+	.home-top,
+	.nav-primary,
+	.nav-secondary,
+	.post-edit-link,
+	.sidebar {
+		display: none !important;
+	}
+
+	.title-area {
+		text-align: center;
+		width: 100%;
+	}
+
+	.site-title > a {
+		margin: 0;
+		text-decoration: none;
+		text-indent: 0;
+	}
+
+	.site-inner {
+		padding-top: 0;
+		position: relative;
+		top: -100px;
+	}
+
+	.author-box {
+		margin-bottom: 0;
+	}
+
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6 {
+		orphans: 3;
+		page-break-after: avoid;
+		page-break-inside: avoid;
+		widows: 3;
+	}
+
+
+	img {
+		page-break-after: avoid;
+		page-break-inside: avoid;
+	}
+
+	blockquote,
+	pre,
+	table {
+		page-break-inside: avoid;
+	}
+
+	dl,
+	ol,
+	ul {
+		page-break-before: avoid;
+	}
+
+}
