suppress color bg example

--- a/style.css
+++ b/style.css
@@ -1958,7 +1958,7 @@ Beaver Builder Full Width
 /
 /These colors where used to visualise the various widget areas - they are commented out by default
 ------------------------------------------------------------------------------------------------------------------------*/
-.preheadercontainer {background-color:aquamarine;}
+/*.preheadercontainer {background-color:aquamarine;}
 .preheaderleft {background-color:aliceblue;}
 .preheaderright {background-color:antiquewhite;}
 
@@ -1973,7 +1973,7 @@ Beaver Builder Full Width
 
 .home-top-container {background-color: aquamarine;}
 .home-middle-container {background-color: cadetblue; }
-.home-bottom-container {background-color: indianred; }
+.home-bottom-container {background-color: indianred; }*/
 
 
 
