removed client mark up section

--- a/style.css
+++ b/style.css
@@ -17,9 +17,11 @@ Template: genesis
 - Defaults
 	- Typographical Elements
 	- Headings
+	- Colors
 	- Objects
 	- Gallery
 	- Forms
+	- Buttons
 	- Tables
 	- Screen Reader Text
 - Structure and Layout
@@ -47,6 +49,7 @@ Template: genesis
 	- Secondary Navigation
 	- Skip Links
 - Content Area
+  - Home Widgets
 	- Entries
 	- Entry Meta
 	- Pagination
@@ -259,6 +262,9 @@ h6 {
 	font-size: 16px;
 }
 
+/* ## Colors
+--------------------------------------------- */
+
 /* ## Objects
 --------------------------------------------- */
 
@@ -452,6 +458,34 @@ input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-results-button {
 	display: none;
 }
+
+
+
+/* Read More
+---------------------------------------------------------------------------------------------------- */
+
+a.more-link {
+	display:inline-block;
+	font-size:14px;
+	margin-top:10px;
+	padding:10px 20px;
+	border-radius:2px;
+	color:#000;
+	background-color:transparent;
+	border:1px solid #000;
+	transition-property: opacity;
+	transition-delay: 0.3s;
+	transition-duration: .5s;
+	text-transform: uppercase;
+	font-weight: 600;
+
+}
+a.more-link:hover {
+	opacity:.8;
+	color:#fff;
+	background-color:#000;
+}
+
 
 /* ## Tables
 --------------------------------------------- */
@@ -1137,8 +1171,28 @@ img.alignright,
 .footerwidgetheader-container {
 	padding: 2%;
 }
+
+
 /* # Content Area
 ---------------------------------------------------------------------------------------------------- */
+
+
+/* # PreHeader
+---------------------------------------------------------------------------------------------------- */
+
+
+
+/* # Hero
+---------------------------------------------------------------------------------------------------- */
+
+
+
+
+/* # Optin
+---------------------------------------------------------------------------------------------------- */
+
+
+
 
 /*  Entries
 --------------------------------------------- */
@@ -1488,31 +1542,6 @@ li.comment {
 	font-size: 16px;
 }
 
-
-/* Read More
----------------------------------------------------------------------------------------------------- */
-
-a.more-link {
-	display:inline-block;
-	font-size:14px;
-	margin-top:10px;
-	padding:10px 20px;
-	border-radius:2px;
-	color:#000;
-	background-color:transparent;
-	border:1px solid #000;
-	transition-property: opacity;
-	transition-delay: 0.3s;
-	transition-duration: .5s;
-	text-transform: uppercase;
-	font-weight: 600;
-
-}
-a.more-link:hover {
-	opacity:.8;
-	color:#fff;
-	background-color:#000;
-}
 
 
 /*
@@ -1910,198 +1939,9 @@ Beaver Builder Full Width
 }
 
 
-/*----------------------------------------------Client Fun Starts Here---------------------------------------------------*
-/
-/
-------------------------------------------------------------------------------------------------------------------------*/
 
 
 
-
-
-/*----------------------------------------------Structure----------------------------------------------------------------*
-/
-/These colors where used to visualise the various widget areas - they are commented out by default
-------------------------------------------------------------------------------------------------------------------------*/
-/*.preheadercontainer {background-color:aquamarine;}
-.preheaderleft {background-color:aliceblue;}
-.preheaderright {background-color:antiquewhite;}
-
-.herocontainer {background-color:cadetblue;}
-.optincontainer {background-color:blanchedalmond;}
-.footerwidgetheader-container {background-color:darkolivegreen;}
-.site-footer {background-color:azure;}
-.postfooterleft {background-color:indianred;}
-.postfooterright {background-color:antiquewhite;}
-.beforecontent {background-color:coral;}
-.aftercontent {background-color:coral;}
-
-.home-top-container {background-color: aquamarine;}
-.home-middle-container {background-color: cadetblue; }
-.home-bottom-container {background-color: indianred; }*/
-
-
-
-
-
-
-
-
-/*----------------------------------------------Colors-------------------------------------------------------------------*
-/
-/
-------------------------------------------------------------------------------------------------------------------------*/
-
-
-
-
-
-
-
-/*----------------------------------------------Fonts--------------------------------------------------------------------*
-/
-/
-------------------------------------------------------------------------------------------------------------------------*/
-
-
-
-
-
-
-/*----------------------------------------------Buttons--------------------------------------------------------------------*
-/
-/
-------------------------------------------------------------------------------------------------------------------------*/
-
-
-
-
-
-
-
-/*----------------------------------------------PreHeader----------------------------------------------------------------*
-/
-/
-------------------------------------------------------------------------------------------------------------------------*/
-
-
-
-
-
-
-/*----------------------------------------------Header-------------------------------------------------------------------*
-*
-/
-------------------------------------------------------------------------------------------------------------------------*/
-
-
-
-
-
-
-/*-------------------------------------------Social Media Navigation-------------------------------------------------------*
-/
-/
-------------------------------------------------------------------------------------------------------------------------*/
-
-
-
-
-
-
-/*----------------------------------------------Primary Navigation-------------------------------------------------------*
-/
-/
-------------------------------------------------------------------------------------------------------------------------*/
-
-
-
-
-/*----------------------------------------------Hero---------------------------------------------------------------------*
-/
-/
-------------------------------------------------------------------------------------------------------------------------*/
-
-
-
-
-
-
-/*----------------------------------------------Optin--------------------------------------------------------------------*
-/
-/
-------------------------------------------------------------------------------------------------------------------------*/
-
-
-
-
-
-
-/*----------------------------------------------Home Content-------------------------------------------------------------*
-/
-/
-------------------------------------------------------------------------------------------------------------------------*/
-
-
-
-
-
-/*----------------------------------------------Footer Widget Header-----------------------------------------------------*
-/
-/
-------------------------------------------------------------------------------------------------------------------------*/
-
-
-
-
-
-
-/*----------------------------------------------Footer Widgets-----------------------------------------------------------*
-/
-/
-------------------------------------------------------------------------------------------------------------------------*/
-
-
-
-
-
-
-/*----------------------------------------------Footer-------------------------------------------------------------------*
-/
-/
-------------------------------------------------------------------------------------------------------------------------*/
-
-
-
-
-
-
-/*----------------------------------------------SideBar-------------------------------------------------------------------*
-/
-/
-------------------------------------------------------------------------------------------------------------------------*/
-
-
-
-
-
-
-
-/*----------------------------------------------Featured Posts-------------------------------------------------------------*
-/
-/
-------------------------------------------------------------------------------------------------------------------------*/
-
-
-
-
-
-
-
-/*----------------------------------------------Post Structure-------------------------------------------------------------*
-/
-/
-------------------------------------------------------------------------------------------------------------------------*/
 
 
 
