--- a/style.css
+++ b/style.css
@@ -586,7 +586,6 @@ th {
 .entry,
 .entry-comments,
 .entry-pings,
-.sidebar .widget,
 .site-header {
 	padding: 0;
 }
@@ -612,7 +611,7 @@ th {
 
 
 
-.sidebar .widget.enews-widget {
+.sidebar .widget {
 	padding: 40px;
 }
 
