--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme Name: genesischild-mobile-first
 Description: GenesisChild Mobile First is a vanilla base starter theme created for Genesis Framework
 Author: Neil Gee/WP Beaches
 Author URI: http://www.wpbeaches.com/
-Version: 2.5
+Version: 2.6
 Tags: Contains regular Widget areas as well as preheader, home page Hero area, optin wrap and post footer widget areas
 Template: genesis
 */
@@ -71,7 +71,9 @@ Template: genesis
 /* ## Baseline Normalize
 --------------------------------------------- */
 /*! normalize.css v4.1.1 | MIT License | github.com/necolas/normalize.css */
-progress,sub,sup{vertical-align:baseline}button,hr,input{overflow:visible}[type=checkbox],[type=radio],legend{box-sizing:border-box;padding:0}html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,details,figcaption,figure,footer,header,main,menu,nav,section,summary{display:block}audio,canvas,progress,video{display:inline-block}audio:not([controls]){display:none;height:0}[hidden],template{display:none}a{background-color:transparent;-webkit-text-decoration-skip:objects}a:active,a:hover{outline-width:0}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}dfn{font-style:italic}h1{font-size:2em;margin:.67em 0}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}svg:not(:root){overflow:hidden}code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}figure{margin:1em 40px}hr{box-sizing:content-box;height:0}button,input,select,textarea{font:inherit;margin:0}optgroup{font-weight:700}button,select{text-transform:none}[type=reset],[type=submit],button,html [type=button]{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:ButtonText dotted 1px}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em}legend{color:inherit;display:table;max-width:100%;white-space:normal}textarea{overflow:auto}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-input-placeholder{color:inherit;opacity:.54}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}
+html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,details,figcaption,figure,footer,header,main,menu,nav,section,summary{display:block}audio,canvas,progress,video{display:inline-block}audio:not([controls]){display:none;height:0}progress{vertical-align:baseline}template,[hidden]{display:none}a{background-color:transparent;-webkit-text-decoration-skip:objects}a:active,a:hover{outline-width:0}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}dfn{font-style:italic}h1{font-size:2em;margin:0.67em 0}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-0.25em}sup{top:-0.5em}img{border-style:none}svg:not(:root){overflow:hidden}code,kbd,pre,samp{font-family:monospace, monospace;font-size:1em}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}button,input,select,textarea{font:inherit;margin:0}optgroup{font-weight:bold}button,input{overflow:visible}button,select{text-transform:none}button,html [type="button"],[type="reset"],[type="submit"]{-webkit-appearance:button}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type="button"]:-moz-focusring,[type="reset"]:-moz-focusring,[type="submit"]:-moz-focusring{outline:1px dotted ButtonText}fieldset{border:1px solid #c0c0c0;margin:0 2px;padding:0.35em 0.625em 0.75em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}textarea{overflow:auto}[type="checkbox"],[type="radio"]{box-sizing:border-box;padding:0}[type="number"]::-webkit-inner-spin-button,[type="number"]::-webkit-outer-spin-button{height:auto}[type="search"]{-webkit-appearance:textfield;outline-offset:-2px}[type="search"]::-webkit-search-cancel-button,[type="search"]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-input-placeholder{color:inherit;opacity:0.54}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}
+
+
 
 /* ## Box Sizing
 --------------------------------------------- */
@@ -264,6 +266,12 @@ h6 {
 
 /* ## Colors
 --------------------------------------------- */
+
+
+
+
+
+
 
 /* ## Objects
 --------------------------------------------- */
@@ -487,7 +495,6 @@ a.more-link {
 	border-radius:2px;
 	color:#000;
 	background-color:transparent;
-	border:1px solid #000;
 	transition-property: opacity;
 	transition-delay: 0.3s;
 	transition-duration: .5s;
@@ -585,7 +592,7 @@ th:first-child {
 
 .site-inner {
 	clear: both;
-	padding-top: 10px;
+	padding: 10px 0;
 	word-wrap: break-word;
 }
 
@@ -1219,6 +1226,10 @@ img.alignright,
 	padding: 2%;
 }
 
+.home-content .widget-title {
+	text-align: center;
+}
+
 
 /* # Content Area
 ---------------------------------------------------------------------------------------------------- */
@@ -1254,6 +1265,10 @@ img.alignright,
 
 .content .entry {
 	background-color: #fff;
+}
+
+.entry-content {
+	margin-bottom: 10px;
 }
 
 .entry-content ol,
@@ -1379,12 +1394,6 @@ li.comment {
 
 .comment-list li li {
 	margin-right: -32px;
-}
-
-.comment-respond input[type="email"],
-.comment-respond input[type="text"],
-.comment-respond input[type="url"] {
-	width: 50%;
 }
 
 .comment-respond label {
@@ -1668,7 +1677,6 @@ Beaver Builder Full Width
 	/* Columns
 	---------------------------------------------------------------------------------------------------- */
 	/* Link: http://twitter.github.io/bootstrap/assets/css/bootstrap-responsive.css */
-
 	.five-sixths,
 	.four-sixths,
 	.one-fourth,
@@ -1719,7 +1727,7 @@ Beaver Builder Full Width
 	.genesis-nav-menu li.right {
 		display: inline-block;
 	}
-
+	.home .featuredpage:first-of-type,
 	.first {
 		clear: both;
 		margin-left: 0;
@@ -1938,6 +1946,12 @@ Beaver Builder Full Width
 
 	.footer-widgets {
 		text-align: left;
+	}
+
+	.comment-respond input[type="email"],
+	.comment-respond input[type="text"],
+	.comment-respond input[type="url"] {
+		width: 50%;
 	}
 
 }
