add home-content classes to optin and hero, update readme, tweak footer widget header class

--- a/style.css
+++ b/style.css
@@ -1458,7 +1458,7 @@ li.comment {
 ---------------------------------------------------------------------------------------------------- */
 
 
-.footerwidgetheader .widget-title {
+.footerwidgetheader-container .widget-title {
 	text-align: center;
 	font-size: 30px;
 	margin: 20px auto;
