--- a/style.css
+++ b/style.css
@@ -1240,6 +1240,16 @@ background: #aaa;
 
 /* # Home Content Widget Areas
 ---------------------------------------------------------------------------------------------------- */
+.home-content section {
+	clear: both;
+	overflow: auto;
+	margin-bottom: 2%;
+}
+
+.home-content section:last-of-type {
+	margin-bottom: 0;
+}
+
 .home-content .widget-title {
 	text-align: center;
 	font-size: 32px;
